--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="de">
 
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-    <meta name="description" content="" />
-    <meta name="author" content="" />
+    <meta name="description" content="lb02" />
+    <meta name="author" content="samuel oehler, nils merki" />
     <title>LB02 Merki Oehler</title>
     <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico" />
     <!-- Google fonts-->
@@ -19,35 +19,7 @@
         integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <!-- Javascript smooth scrolling effect (from w3schools)-->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script>
-        $(document).ready(function () {
-            // Add smooth scrolling to all links
-            $("a").on('click', function (event) {
-
-                // Make sure this.hash has a value before overriding default behavior
-                if (this.hash !== "") {
-                    // Prevent default anchor click behavior
-                    event.preventDefault();
-
-                    // Store hash
-                    var hash = this.hash;
-
-                    // Using jQuery's animate() method to add smooth page scroll
-                    // The optional number (800) specifies the number of milliseconds it takes to scroll to the specified area
-                    $('html, body').animate({
-                        scrollTop: $(hash).offset().top
-                    }, 800, function () {
-
-                        // Add hash (#) to URL when done scrolling (default click behavior)
-                        window.location.hash = hash;
-                    });
-                } // End if
-            });
-        });
-    </script>
-
-
-
+    <script src="js/script.java"></script>
 </head>
 
 <body id="page-top">
@@ -102,7 +74,7 @@
                     </p>
                 </div>
             </div>
-            <img class="img-fluid" src="assets/img/mac.png" alt="" />
+            <img class="img-fluid" src="assets/img/mac.png" alt="macbook" />
         </div>
     </section>
 
@@ -118,19 +90,19 @@
             </ol>
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="assets/img/laptop.jpg" class="d-block w-100" alt="...">
+                    <img src="assets/img/laptop.jpg" class="d-block w-100" alt="laptop bild">
                 </div>
                 <div class="carousel-item">
-                    <img src="assets/img/phone.jpg" class="d-block w-100" alt="...">
+                    <img src="assets/img/phone.jpg" class="d-block w-100" alt="iphone bild">
                 </div>
                 <div class="carousel-item">
-                    <img src="assets/img/airpods.jpg" class="d-block w-100" alt="...">
+                    <img src="assets/img/airpods.jpg" class="d-block w-100" alt="airpods bild">
                 </div>
                 <div class="carousel-item">
-                    <img src="assets/img/laptop2.jpg" class="d-block w-100" alt="...">
+                    <img src="assets/img/laptop2.jpg" class="d-block w-100" alt="laptop bild">
                 </div>
                 <div class="carousel-item">
-                    <img src="assets/img/phone2.jpg" class="d-block w-100" alt="...">
+                    <img src="assets/img/phone2.jpg" class="d-block w-100" alt="iphone bild">
                 </div>
             </div>
             <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
@@ -196,13 +168,6 @@
             </div>
         </div>
     </footer>
-    <!-- Bootstrap core JS-->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.bundle.min.js"></script>
-    <!-- Third party plugin JS-->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js"></script>
-    <!-- Core theme JS-->
-    <script src="js/scripts.js"></script>
 </body>
 
 </html>
